--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -1,3 +1,14 @@
 main {
-    padding-top: 3%;
+    padding-top: 2%;
+
+    @media screen and (max-width: 991px) {
+        padding-top: 4%;
+    }
+}
+
+
+.container {
+    @media (min-width: 1200px) {
+        max-width: 1333px;
+    }
 }
