--- a/src/styles/formInput.scss
+++ b/src/styles/formInput.scss
@@ -6,6 +6,10 @@
     --gray-dark: #343a40;
 }
 
+.form-control {
+    height: auto;
+}
+
 .form-label-group {
     position: relative;
     margin-bottom: 1rem;
